# spacecraft-telemetry-mini-stack

./: .env.example  README.md  dc310pro.py  pyproject.toml  requirements.txt  telemetry.py  telemetry_simulator.py
schema/: init.sql
tvac_sandbox/: box_upload.py
