[project]
name = "tvac-test-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "influxdb-client>=1.50.0",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
    "python-dotenv==1.2.2",
    "pyvisa>=1.16.2",
]

# pyproject.toml
[tool.uv]
python-preference = "only-system"
